--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .header img {
   width: 100%;
 }
-.header .more_inf {
+.header .header__link {
   font-family: fantasy, cursive;
 }
 
@@ -27,12 +27,13 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
+.add-item__task,
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.add-item__content {
   display: flex;
 }
 ul {
@@ -131,7 +132,7 @@ button.delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#completed-tasks__list label {
   text-decoration: line-through;
   color: #888;
 }
@@ -141,11 +142,11 @@ ul li input[type=text] {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+ul li.edit-mode input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+ul li.edit-mode label {
   display: none;
 }
